--- a/DentProy/DentProy.Droid/Resources/layout/Odontograma.axml
+++ b/DentProy/DentProy.Droid/Resources/layout/Odontograma.axml
@@ -13,11 +13,265 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/mothLinearLayout">
+
+      <HorizontalScrollView
+          android:layout_width="fill_parent"
+          android:layout_height="wrap_content"
+          android:layout_alignParentLeft="true"
+          android:layout_centerHorizontal="true"
+          android:id="@+id/buttonMenu"
+          android:layout_below="@+id/upperTempJaw">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+          <LinearLayout
+              android:orientation="horizontal"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:padding="2dp">
+            <Button
+                android:id="@+id/LEY01"
+                android:text="Aparato\nOrdtontico"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
+                android:background="#000000"/>
+            <Button
+                android:id="@+id/LEY02"
+                android:text="ESP"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
+                android:background="#000000"
+                android:layout_toRightOf="@+id/LEY01" />
+            <Button
+                android:id="@+id/LEY03"
+                android:text="ESP"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
+                android:background="#000000"
+                android:layout_toRightOf="@+id/LEY02" />
+            <Button
+                android:id="@+id/LEY04"
+                android:text="ESP"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
+                android:background="#000000"
+                android:layout_toRightOf="@+id/LEY03" />
+            <Button
+                android:id="@+id/LEY05"
+                android:text="ESP"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
+                android:background="#000000"
+                android:layout_toRightOf="@+id/LEY04" />
+            <Button
+                android:id="@+id/LEY06"
+                android:text="ESP"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
+                android:background="#000000"
+                android:layout_toRightOf="@+id/LEY05" />
+            <Button
+                android:id="@+id/LEY07"
+                android:text="ESP"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
+                android:background="#000000"
+                android:layout_toRightOf="@+id/LEY06" />
+            <Button
+                android:id="@+id/LEY08"
+                android:text="ESP"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
+                android:background="#000000"
+                android:layout_toRightOf="@+id/LEY07" />
+            <Button
+                android:id="@+id/LEY09"
+                android:text="ESP"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
+                android:background="#000000"
+                android:layout_toRightOf="@+id/LEY08" />
+            <Button
+                android:id="@+id/LEY10"
+                android:text="ESP"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
+                android:background="#000000"
+                android:layout_toRightOf="@+id/LEY09" />
+            <Button
+                android:id="@+id/LEY11"
+                android:text="ESP"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
+                android:background="#000000"
+                android:layout_toRightOf="@+id/LEY10" />
+            <Button
+                android:id="@+id/LEY12"
+                android:text="ESP"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
+                android:background="#000000"
+                android:layout_toRightOf="@+id/LEY11" />
+            <Button
+                android:id="@+id/LEY13"
+                android:text="ESP"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
+                android:background="#000000"
+                android:layout_toRightOf="@+id/LEY12" />
+            <Button
+                android:id="@+id/LEY14"
+                android:text="ESP"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
+                android:background="#000000"
+                android:layout_toRightOf="@+id/LEY13" />
+            <Button
+                android:id="@+id/LEY15"
+                android:text="ESP"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
+                android:background="#000000"
+                android:layout_toRightOf="@+id/LEY14" />
+            <Button
+                android:id="@+id/LEY16"
+                android:text="ESP"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
+                android:background="#000000"
+                android:layout_toRightOf="@+id/LEY15" />
+            <Button
+                android:id="@+id/LEY17"
+                android:text="ESP"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
+                android:background="#000000"
+                android:layout_toRightOf="@+id/LEY16" />
+            <Button
+                android:id="@+id/LEY18"
+                android:text="ESP"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
+                android:background="#000000"
+                android:layout_toRightOf="@+id/LEY17" />
+            <Button
+                android:id="@+id/LEY19"
+                android:text="ESP"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
+                android:background="#000000"
+                android:layout_toRightOf="@+id/LEY18" />
+            <Button
+                android:id="@+id/LEY20"
+                android:text="ESP"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
+                android:background="#000000"
+                android:layout_toRightOf="@+id/LEY19" />
+            <Button
+                android:id="@+id/LEY21"
+                android:text="ESP"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
+                android:background="#000000"
+                android:layout_toRightOf="@+id/LEY20" />
+            <Button
+                android:id="@+id/LEY22"
+                android:text="ESP"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
+                android:background="#000000"
+                android:layout_toRightOf="@+id/LEY21" />
+            <Button
+                android:id="@+id/LEY23"
+                android:text="ESP"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
+                android:background="#000000"
+                android:layout_toRightOf="@+id/LEY22" />
+            <Button
+                android:id="@+id/LEY24"
+                android:text="ESP"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
+                android:background="#000000"
+                android:layout_toRightOf="@+id/LEY23" />
+            <Button
+                android:id="@+id/LEY25"
+                android:text="ESP"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
+                android:background="#000000"
+                android:layout_toRightOf="@+id/LEY24" />
+            <Button
+                android:id="@+id/LEY26"
+                android:text="ESP"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
+                android:background="#000000"
+                android:layout_toRightOf="@+id/LEY25" />
+            <Button
+                android:id="@+id/LEY27"
+                android:text="ESP"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
+                android:background="#000000"
+                android:layout_toRightOf="@+id/LEY26" />
+            <Button
+                android:id="@+id/LEY28"
+                android:text="ESP"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
+                android:background="#000000"
+                android:layout_toRightOf="@+id/LEY27" />
+            <Button
+                android:id="@+id/LEY29"
+                android:text="ESP"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
+                android:background="#000000"
+                android:layout_toRightOf="@+id/LEY28" />
+            <Button
+                android:id="@+id/LEY30"
+                android:text="ESP"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
+                android:background="#000000"
+                android:layout_toRightOf="@+id/LEY29" />
+            <Button
+                android:id="@+id/LEY31"
+                android:text="ESP"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
+                android:background="#000000"
+                android:layout_toRightOf="@+id/LEY30" />
+            <Button
+                android:id="@+id/LEY32"
+                android:text="ESP"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
+                android:background="#000000"
+                android:layout_toRightOf="@+id/LEY31" />
+            <Button
+                android:id="@+id/LEY33"
+                android:text="ESP"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
+                android:background="#000000"
+                android:layout_toRightOf="@+id/LEY32" />
+          </LinearLayout>
+        </LinearLayout>
+      </HorizontalScrollView>
+      
       <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
-       android:layout_centerHorizontal="true"
+       android:layout_centerHorizontal="true"          
+       android:layout_centerInParent="true"
+       android:layout_gravity="center_horizontal"
+       android:layout_below="@+id/buttonMenu"
        android:id="@+id/upperJaw">
         <LinearLayout
             android:orientation="vertical"
